ingress-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
spec:
  ingressClassName: nginx
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /v1
            pathType: Prefix 
            backend:
              service:
                name: app1
                port:
                  number: 8000
          - path: /v2
            pathType: Prefix 
            backend:
              service:
                name: app2
                port:
                  number: 8000
